<resources>
    <string name="app_name">MDP Controller</string>
    <string name="activity_setting">Setting</string>
    <string name="activity_bt_devices">Bluetooth Devices</string>

    <string name="share_app_title">Share app…</string>
    <string name="pick_device">Bluetooth device</string>
    <string name="setting">Setting</string>
    <string name="reconnect_last_device">Reconnect last device</string>
    <string name="disconnect">Disconnect</string>
    <string name="show_msg_sent">Show sent</string>
    <string name="show_msg_received">Show received</string>
    <string name="clear_history">Clear history</string>
    <string name="records">Records</string>
    <string name="robot">Robot</string>
    <string name="way_point">Way Point</string>
    <string name="map">Map</string>
    <string name="map_edition_cap">MAP EDITION</string>
    <string name="status_cap">STATUS</string>
    <string name="explore_cap">EXPLORE</string>
    <string name="fastest_cap">FASTEST</string>
    <string name="refresh">Refresh</string>
    <string name="discoverable">Discoverable</string>
    <string name="discovering">Discovering(%1$d) …</string>
    <string name="paired_devices">Paired</string>
    <string name="nearby_devices">Nearby</string>
    <string name="no_device_found">No device found</string>
    <string name="not_connected">Not connected.</string>
    <string name="connecting_">Connecting…</string>
    <string name="connected_to__device_">Connected to %1$s</string>
    <string name="ctrl_accelerometer">Accelerometer</string>
    <string name="ctrl_auto_update">Auto update</string>
    <string name="hint_bt_chat_input">Enter message</string>

    <!--  Dialog  -->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="page_not_found">Page not found</string>
    <string name="page_not_found_msg">Specified page is not found</string>
    <string name="permission_required">Permission required</string>
    <string name="permission_reason_for_scan">Location permission is required to find nearby devices.</string>
    <string name="set_robot_dir_title">Robot direction</string>
    <string name="clear_way_point_title">Way point</string>
    <string name="clear_way_point_msg">Remove way point from the map</string>
    <string name="set_all_cells_as_title">Change all cells</string>
    <string name="set_all_cells_as_msg">All cell will be changed to \'%1$s\' state?</string>
    <string name="set_map_descriptor_title">Map Descriptor</string>
    <string name="invalid">Invalid</string>
    <string name="dir_up">U</string>
    <string name="dir_down">D</string>
    <string name="dir_left">L</string>
    <string name="dir_right">R</string>
    <string name="error_parsing">Error parsing</string>
    <string name="msg_invalid_robot_position">Robot cannot move to this position</string>
    <string name="msg_way_point_not_set">Way point is not set</string>
    <string name="speech_cmd_hint">Listening to command</string>
    <string name="speech_not_supported">Speech not supported</string>
    <string name="position">Position</string>
    <string name="direction">Direction</string>
    <string name="hint_coordinate_x">X</string>
    <string name="hint_coordinate_y">Y</string>
    <string name="hint_part_one">Part I</string>
    <string name="hint_part_two">Part II</string>
    <string name="hint_images">Images</string>
    <string name="helper_images">eg, (id,x,y) separated with comma</string>


    <!-- Map Edit -->
    <string name="edit_robot">ROBOT</string>
    <string name="edit_way_point">WAY\nPOINT</string>
    <string name="edit_cell_unknown">UNKNOWN\nCELL</string>
    <string name="edit_cell_explored">EXPLORED\nCELL</string>
    <string name="edit_cell_obstacle">OBSTACLE\nCELL</string>
    <string name="edit_map">MAP</string>
    <string name="edit_images">IMAGES</string>
    <string name="edit_reset_map">RESET</string>
    <string name="part_one_default">FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF</string>

    <!-- Preferences -->
    <string name="pref_name">mdp_pref</string>
    <string name="cmd_up">up</string>
    <string name="cmd_up_default">up</string>
    <string name="cmd_left">left</string>
    <string name="cmd_left__default">left</string>
    <string name="cmd_right">right</string>
    <string name="cmd_right_default">right</string>
    <string name="cmd_down">down</string>
    <string name="cmd_down_default">down</string>
    <string name="cmd_calibrate">calibrate</string>
    <string name="cmd_calibrate_default">calibrate</string>
    <string name="cmd_explore">explore</string>
    <string name="cmd_explore_default">explore</string>
    <string name="cmd_fastest">fastest</string>
    <string name="cmd_fastest_default">fastest</string>
    <string name="cmd_f1">f1</string>
    <string name="cmd_f1_default">f1</string>
    <string name="cmd_f2">f2</string>
    <string name="cmd_f2_default">f2</string>
    <string name="cmd_stop">stop</string>
    <string name="cmd_stop_default">stop</string>
    <string name="cmd_req_map">req_map</string>
    <string name="cmd_req_map_default">sendArena</string>
    <string name="bt_last_address">bt_last_address</string>

    <!-- Debug -->
    <string name="test_long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed elementum tempus egestas sed sed risus pretium quam. Luctus venenatis lectus magna fringilla urna porttitor rhoncus dolor. Laoreet sit amet cursus sit amet dictum sit amet justo. Facilisi nullam vehicula ipsum a arcu cursus vitae congue mauris. Vivamus arcu felis bibendum ut tristique et egestas quis ipsum. Ultrices in iaculis nunc sed augue lacus viverra vitae. Euismod nisi porta lorem mollis aliquam ut. At risus viverra adipiscing at in tellus integer feugiat. Posuere lorem ipsum dolor sit amet. Eget mauris pharetra et ultrices neque ornare aenean euismod elementum. Bibendum est ultricies integer quis auctor elit sed vulputate. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Enim nulla aliquet porttitor lacus luctus accumsan. Vulputate sapien nec sagittis aliquam malesuada. Netus et malesuada fames ac turpis. Erat nam at lectus urna. Odio ut sem nulla pharetra. Semper auctor neque vitae tempus quam pellentesque nec nam aliquam. Posuere urna nec tincidunt praesent semper.</string>
    <string name="test_pii_1">00000000000000007061C0400080010001E000400000000200044438F8C0000000000000080</string>
    <string name="test_pii_2">0000000001C000000000003870100000000400080010FE3004000000006100C020004000800</string>
    <string name="test_images_1">(7,7,6),(1,6,9),(4,3,18),(11,14,15),(13,11,11)</string>
    <string name="test_images_2">(1,0,6),(2,1,6),(3,2,6),(4,2,7),(5,0,12),(6,1,12),(7,2,12),(8,2,13),(9,3,17),(10,3,18),(11,3,19),(12,8,15),(13,9,15),(14,8,16),(15,9,16)</string>
</resources>