<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="?dialogPreferredPadding"
        android:paddingEnd="?dialogPreferredPadding"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/input_x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginEnd="5dp"
                android:hint="@string/hint_coordinate_x"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/input_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginStart="5dp"
                android:hint="@string/hint_coordinate_y"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direction"
            android:layout_marginTop="20dp" />

        <RadioGroup
            android:id="@+id/rg_robot_dir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                style="@style/MDPButton.Radio"
                android:id="@+id/rb_dir_west"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:drawableTop="@drawable/ic_arrow_left"
                android:text="@string/dir_left" />
            <RadioButton
                style="@style/MDPButton.Radio"
                android:id="@+id/rb_dir_north"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:drawableTop="@drawable/ic_arrow_up"
                android:text="@string/dir_up" />
            <RadioButton
                style="@style/MDPButton.Radio"
                android:id="@+id/rb_dir_south"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:drawableTop="@drawable/ic_arrow_down"
                android:text="@string/dir_down" />
            <RadioButton
                style="@style/MDPButton.Radio"
                android:id="@+id/rb_dir_east"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:drawableTop="@drawable/ic_arrow_right"
                android:text="@string/dir_right" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>
