<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="?dialogPreferredPadding"
        android:paddingEnd="?dialogPreferredPadding"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/input_map_p1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_part_one"
            app:endIconMode="clear_text"
            app:counterEnabled="true"
            app:counterMaxLength="76">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textMultiLine|textCapCharacters"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/input_map_p2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_part_two"
            app:endIconMode="clear_text"
            app:counterEnabled="true"
            app:counterMaxLength="76">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textMultiLine|textCapCharacters"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/input_map_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_images"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_images">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textMultiLine|textCapCharacters"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</ScrollView>
