<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/bottomSheetStyle"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_bottom_sheet"

    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="false"
    app:behavior_peekHeight="49dp"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shape_drag_handler"
        android:padding="2dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_cap"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_status_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#8FFF"
                android:textSize="9sp"
                android:visibility="visible"
                android:text="[robot status]"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_edit_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-16dp"
            android:button="@drawable/selector_edit"
            android:visibility="visible"
            app:buttonTint="@color/selector_color" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="?attr/listPreferredItemPaddingStart"
            android:paddingEnd="?attr/listPreferredItemPaddingEnd"
            android:paddingBottom="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/MDPStatusCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/robot"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:src="@drawable/ic_position"/>
                <TextView
                    style="@style/MDPStatusValue"
                    android:id="@+id/tv_status_robot_pos"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:src="@drawable/ic_angle"/>
                <TextView
                    style="@style/MDPStatusValue"
                    android:id="@+id/tv_status_robot_dir"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"/>
            </LinearLayout>



            <TextView
                style="@style/MDPStatusCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/way_point"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:src="@drawable/ic_position"/>
                <TextView
                    style="@style/MDPStatusValue"
                    android:id="@+id/tv_status_way_pt_pos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <TextView
                style="@style/MDPStatusCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/map"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:src="@drawable/ic_num_1"/>
                <TextView
                    style="@style/MDPStatusValue"
                    android:id="@+id/tv_status_p1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:src="@drawable/ic_num_2"/>
                <TextView
                    style="@style/MDPStatusValue"
                    android:id="@+id/tv_status_p2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_images"/>
                <TextView
                    style="@style/MDPStatusValue"
                    android:id="@+id/tv_status_images"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>